further work on examples

--- a/history/master.css
+++ b/history/master.css
@@ -90,6 +90,10 @@ div.nlp {
 		background: PapayaWhip;
 }
 
+div.agent {
+		background: LightSalmon;
+}
+
 div.coref {
 		background: LemonChiffon;
 }
